fixed alignment for monero donation

--- a/__site/css/franklin.css
+++ b/__site/css/franklin.css
@@ -33,6 +33,15 @@ html {
     color: var(--text-color);
 }
 
+.left {
+    background-color: #181A1B;  /* lighter-dark */
+    /* background-color: #131516;  /* darker-dark */
+    color: #E8E6E3;
+    text-align: left;
+}
+
+
+
 /* ==================================================================
     BASIC GRID FOR PROFILE PIC
 ================================================================== */
@@ -282,26 +291,6 @@ td {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-}
-
-/* Donation page */
-.donation {
-    width: 100%;
-    text-align: center;
-}
-
-.stack {
-    width: 49%;
-    padding: 1em;
-}
-
-.donation-logo img {
-    width: 20%;
-}
-
-.qrcode img {
-    display: block;
-    width: 20%;
 }
 
 
